@@ -23,17 +23,20 @@ package org.rumbledb.items;
 import com.esotericsoftware.kryo.Kryo;
 import com.esotericsoftware.kryo.io.Input;
 import com.esotericsoftware.kryo.io.Output;
+
 import org.rumbledb.api.Item;
 import org.rumbledb.exceptions.ExceptionMetadata;
-import org.rumbledb.exceptions.IteratorFlowException;
-import org.rumbledb.exceptions.OurBadException;
-import org.rumbledb.exceptions.UnexpectedTypeException;
-import org.rumbledb.expressions.comparison.ComparisonExpression;
+import org.rumbledb.expressions.comparison.ComparisonExpression.ComparisonOperator;
+import org.rumbledb.runtime.flwor.NativeClauseContext;
+import org.rumbledb.types.BuiltinTypesCatalogue;
+import org.rumbledb.runtime.misc.ComparisonIterator;
 import org.rumbledb.types.ItemType;
+import org.rumbledb.types.SequenceType;
+
 import java.math.BigDecimal;
 import java.math.BigInteger;
 
-public class IntItem extends AtomicItem {
+public class IntItem implements Item {
 
 
     private static final long serialVersionUID = 1L;
@@ -46,6 +49,20 @@ public class IntItem extends AtomicItem {
     public IntItem(int value) {
         super();
         this.value = value;
+    }
+
+    @Override
+    public boolean equals(Object otherItem) {
+        if (otherItem instanceof Item) {
+            long c = ComparisonIterator.compareItems(
+                this,
+                (Item) otherItem,
+                ComparisonOperator.VC_EQ,
+                ExceptionMetadata.EMPTY_METADATA
+            );
+            return c == 0;
+        }
+        return false;
     }
 
     @Override
@@ -68,8 +85,17 @@ public class IntItem extends AtomicItem {
         return this.value != 0;
     }
 
+    @Override
+    public String getStringValue() {
+        return String.valueOf(this.value);
+    }
+
     public double castToDoubleValue() {
-        return new Integer(this.value).doubleValue();
+        return Integer.valueOf(this.value).doubleValue();
+    }
+
+    public float castToFloatValue() {
+        return Integer.valueOf(this.value).floatValue();
     }
 
     public BigDecimal castToDecimalValue() {
@@ -100,47 +126,8 @@ public class IntItem extends AtomicItem {
     }
 
     @Override
-    public boolean isTypeOf(ItemType type) {
-        return type.equals(ItemType.integerItem)
-            || type.equals(ItemType.decimalItem)
-            || super.isTypeOf(type);
-    }
-
-    @Override
-    public boolean canBePromotedTo(ItemType type) {
-        return type.equals(ItemType.doubleItem) || super.canBePromotedTo(type);
-    }
-
-    @Override
-    public Item castAs(ItemType itemType) {
-        if (itemType.equals(ItemType.booleanItem)) {
-            return ItemFactory.getInstance().createBooleanItem(this.value != 0);
-        }
-        if (itemType.equals(ItemType.doubleItem)) {
-            return ItemFactory.getInstance().createDoubleItem(this.castToDoubleValue());
-        }
-        if (itemType.equals(ItemType.decimalItem)) {
-            return ItemFactory.getInstance().createDecimalItem(this.castToDecimalValue());
-        }
-        if (itemType.equals(ItemType.integerItem)) {
-            return this;
-        }
-        if (itemType.equals(ItemType.stringItem)) {
-            return ItemFactory.getInstance().createStringItem(serialize());
-        }
-        throw new ClassCastException();
-    }
-
-    @Override
-    public boolean isCastableAs(ItemType itemType) {
-        return !itemType.equals(ItemType.atomicItem)
-            &&
-            !itemType.equals(ItemType.nullItem);
-    }
-
-    @Override
-    public String serialize() {
-        return String.valueOf(this.value);
+    public boolean isDouble() {
+        return false;
     }
 
     @Override
@@ -153,114 +140,42 @@ public class IntItem extends AtomicItem {
         this.value = input.readInt();
     }
 
-    public boolean equals(Object otherItem) {
-        try {
-            return (otherItem instanceof Item) && this.compareTo((Item) otherItem) == 0;
-        } catch (IteratorFlowException e) {
-            return false;
-        }
-    }
-
     public int hashCode() {
         return getIntValue();
     }
 
     @Override
-    public int compareTo(Item other) {
-        if (other.isNull()) {
-            return 1;
-        }
-        if (other.isInt()) {
-            return Integer.compare(this.value, other.getIntValue());
-        }
-        if (other.isInteger()) {
-            return this.castToIntegerValue().compareTo(other.getIntegerValue());
-        }
-        if (other.isDecimal()) {
-            return this.castToDecimalValue().compareTo(other.getDecimalValue());
-        }
-        if (other.isDouble()) {
-            return Double.compare(this.castToDoubleValue(), other.getDoubleValue());
-        }
-        throw new OurBadException("Comparing an int to something that is not a number.");
-    }
-
-    @Override
-    public Item compareItem(
-            Item other,
-            ComparisonExpression.ComparisonOperator comparisonOperator,
-            ExceptionMetadata metadata
-    ) {
-        if (!other.isNumeric() && !other.isNull()) {
-            throw new UnexpectedTypeException(
-                    "Invalid args for numerics comparison "
-                        + this.serialize()
-                        +
-                        ", "
-                        + other.serialize(),
-                    metadata
-            );
-        }
-        return super.compareItem(other, comparisonOperator, metadata);
-    }
-
-
-    @Override
-    public Item add(Item other) {
-        if (other.isDouble()) {
-            return ItemFactory.getInstance().createDoubleItem(this.castToDoubleValue() + other.getDoubleValue());
-        }
-        if (
-            other.isInt()
-                && (this.value < Integer.MAX_VALUE / 2
-                    && this.value > -Integer.MAX_VALUE / 2
-                    && other.getIntValue() > -Integer.MAX_VALUE / 2
-                    && other.getIntValue() < Integer.MAX_VALUE / 2)
-        ) {
-            return ItemFactory.getInstance().createIntItem(this.value + other.castToIntValue());
-        }
-        if (other.isInteger()) {
-            return ItemFactory.getInstance()
-                .createIntegerItem(this.castToIntegerValue().add(other.getIntegerValue()));
-        }
-        if (other.isDecimal()) {
-            return ItemFactory.getInstance().createDecimalItem(this.castToDecimalValue().add(other.getDecimalValue()));
-        }
-        throw new OurBadException("Unexpected type encountered");
-    }
-
-    @Override
-    public Item subtract(Item other) {
-        if (other.isDouble()) {
-            return ItemFactory.getInstance().createDoubleItem(this.castToDoubleValue() - other.getDoubleValue());
-        }
-        if (
-            other.isInt()
-                && (this.value < Integer.MAX_VALUE / 2
-                    && this.value > -Integer.MAX_VALUE / 2
-                    && other.getIntValue() > -Integer.MAX_VALUE / 2
-                    && other.getIntValue() < Integer.MAX_VALUE / 2)
-        ) {
-            return ItemFactory.getInstance().createIntItem(this.value - other.castToIntValue());
-        }
-        if (other.isInteger()) {
-            return ItemFactory.getInstance()
-                .createIntegerItem(this.castToIntegerValue().subtract(other.getIntegerValue()));
-        }
-        if (other.isDecimal()) {
-            return ItemFactory.getInstance()
-                .createDecimalItem(this.castToDecimalValue().subtract(other.getDecimalValue()));
-        }
-        throw new OurBadException("Unexpected type encountered");
-    }
-
-    @Override
     public ItemType getDynamicType() {
-        return ItemType.integerItem;
+        return BuiltinTypesCatalogue.intItem;
     }
 
     @Override
+    public NativeClauseContext generateNativeQuery(NativeClauseContext context) {
+        return new NativeClauseContext(context, "" + this.value, SequenceType.INT);
+    }
+
     public boolean isNumeric() {
         return true;
+    }
+
+    @Override
+    public boolean isAtomic() {
+        return true;
+    }
+
+    @Override
+    public String getSparkSQLValue() {
+        return String.valueOf(this.value);
+    }
+
+    @Override
+    public String getSparkSQLValue(ItemType itemType) {
+        return String.valueOf(this.value);
+    }
+
+    @Override
+    public String getSparkSQLType() {
+        // TODO: Make enum?
+        return "INT";
     }
 }
